fix: add spacing around pickup location buttons

--- a/src/assets/scss/delivery-options/style.scss
+++ b/src/assets/scss/delivery-options/style.scss
@@ -14,6 +14,14 @@
 
   position: relative;
 
+  .pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .ml-1 {
+    margin-left: 0.25rem;
+  }
+
   .#{$classBase} {
     &__h-auto {
       height: auto;
